<resources>
    <string name="app_name">Pasto Turistico</string>
    <string name="iniciarSes">Iniciar Sesion</string>
    <string name="ciudad">Pasto</string>
    <string name="Recontraseña">Repetir Contraseña</string>
    <string name="contraseña">contraseña</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario">Usuario</string>
    <string name="salir">SALIR</string>
    <string name="perfil">PERFIL</string>
    <string name="principal">PRINCIPAL</string>
    <string name="usuarioo">Usuario:</string>
    <string name="correoo">Correo:</string>
    <string name="Lugares">Lugares Representativos y Fechas</string>
    <string name="Volcan1">Volcan Galeras</string>
    <string name="Volcan2">Volcan Cumbal</string>
    <string name="lajas">Iglesia las lajas</string>
    <string name="carnvales">Carnavales de negros y blancos fechas 2 a 7 de enero</string>
    <string name="error">error contraseña o correo invalidas</string>
    <string name="errorLogin">error en registro</string>
    <string name="errorContraseñas">error las contraseñas no coinciden</string>
    <string name="errorCampos">uno o mas campos estan vacios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel1">HOTEL DEL PARQUE</string>
    <string name="hotel2">HOTEL FERNANDO PLAZA</string>
    <string name="fragement1">HOTEL 1</string>
    <string name="fragment2">HOTEL 2</string>
    <string name="title_activity_hoteles">HotelesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hoteles">HOTELES</string>
    <string name="bares">BARES</string>
    <string name="restaurante">RESTAURANTES</string>
    <string name="title_activity_restaurantes">RestaurantesActivity</string>
    <string name="title_activity_bares">BaresActivity</string>
    <string name="hotel3">HOTEL TORRES DEL BOSQUE</string>
    <string name="bar1">BAR COYOTE UGLY</string>
    <string name="bar2">BAR TERRAZA LA MERCED</string>
    <string name="bar3">CAPITAN NIRVANA</string>
    <string name="res1">PERU FUSION</string>
    <string name="res2">RESTAURANTE SAUSALITO</string>
    <string name="res3">RESTAURANTE TIPICUY</string>
    <string name="bartext1">Dirección: Calle 18 # 29-91 Parque Infantil Loc.7, Pasto, Nariño
Teléfono: 300 4068004</string>
    <string name="bartext2">Direccion\t Cra 36 #12-14 B/ La Aurora Pasto, Narino Celular\t310 4229354 Website\thttp://www.lamerced.com.co/</string>
    <string name="bartext3">Dirección: Cra. 27, Pasto, Nariño Teléfono: (2) 7294120</string>
    <string name="hoteltext1">Dirección: Carrera 21 #9 -11, Parque Bolivar, Pasto, Nariño Teléfono: (2) 7204585</string>
    <string name="hoteltext2">Hotel de 3 estrellas Dirección: No. Centro, Cl. 21 #2116, Pasto, Nariño Teléfono: (2) 7291432</string>
    <string name="hoteltext3">Dirección: Cra. 44 #18-12, Pasto, Nariño Teléfono: 313 6850763</string>
    <string name="restaurantetext1">Dirección: # a 19a-85,, Cra. 33 #191, Pasto, Nariño</string>
    <string name="restaurantetext2"><![CDATA[Restaurante especializado en filetes   Dirección: Cra 35a #20-63 | La Riviera, Pasto 540000, Colombia Ubicación: América del Sur  >  Colombia  >  Departamento de Nariño  >  Pasto Teléfono: 573005620608]]></string>
    <string name="restaurantetext3">Dirección: # a 50-144,, Cl. 18 #50142, Pasto, Nariño Teléfono: (2) 7317604   Especialidad platos tipicos</string>
    <string name="hoteltittle">MEJORES HOTELES</string>
    <string name="barestittle">MEJORES BARES</string>
    <string name="restaurantetittle">MEJORES RESTAURANTES</string>
    <string name="parque1">Parque Bolivar</string>
    <string name="descripcion">parque visitar en familia</string>
    <string name="direccion">carrera 15 # 16-50</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_hotel_drawer">HotelDrawerActivity</string>
    <string name="title_activity_restaurante_drawer">RestauranteDrawerActivity</string>
    <string name="title_activity_perfil_drawer">PerfilDrawerActivity</string>
    <string name="extras">EXTRAS</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="title_activity_extra_drawer">ExtraDrawerActivity</string>
    <string name="title_activity_historia_extra_drawe">HistoriaExtraDraweActivity</string>
    <string name="historiaPasto">El área del municipio de Pasto fue habitada por los indígenas Pastos antes de la conquista española. No existe unanimidad y certeza entre los historiadores y cronistas sobre el fundador y la fecha exacta de fundación de la ciudad que inicialmente se llamó Villaviciosa de la Concepción de la Provincia de Hatunllacta. La ciudad fue fundada dos veces. La primera fundación algunos historiadores consideran fue realizada por el adelantado Sebastián de Belalcázar en 1537 y en el sitio que hoy es ocupado por la población de Yacuanquer; el traslado posterior a su situación actual en el Valle de Atriz, o segunda fundación, la llevó a cabo Lorenzo de Aldana cuando llegó a pacificar la región en 1539. Otros historiadores mencionan a Pedro de Puelles como el fundador que fue el primer teniente de gobernador de la ciudad y se menciona también al capitán Rodrigo de Ocampo, así como al Capitán Gonzalo Díaz de Pineda.</string>
    <string name="historia">HISTORIA DE PASTO</string>
    <string name="title_activity_artesania_extra_drawer">ArtesaniaExtraDrawerActivity</string>
    <string name="artesania">ARTESANIA</string>
    <string name="artesaniadoc">Los artesanos pastusos de marroquinería así como de la madera, ebanistas y talladores, son famosos desde la época de la colonia.  Pero la más característica y original de las manifestaciones culturales y artesanales de los pastusos es la elaboración de utensilios de madera tallada y cubierta con una resina obtenida del fruto de un arbusto de la selva andina, llamado Mopa - Mopa; utilizan una técnica refinada manual que data del periodo prehispánico, conocida como Barniz de Pasto. El refinamiento alcanzado permite obtener objetos utilitarios o decorativos de gran belleza y mérito artístico que trascienden lo artesanal.  Igualmente es muy característica de la ciudad la artesanía de enchapado en tamo de objetos de madera usando delgadas láminas vegetales coloreadas, obtenidas de la paja de cereales y con las cuales se elaboran dibujos y figuras con resultados semejantes a los de la taracea o marquetería.</string>
    <string name="title_activity_gastronomia_extra_drawer">GastronomiaExtraDrawerActivity</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="gastronomiadoc">Los platos representativos de la gastronomía típica de San Juan de Pasto (Colombia) son el producto del mestizaje, y la expresión de la fertilidad de las tierras y de la laboriosidad de la gente. El plato más representativo es el cuy asado a la brasa y que el 7 de enero se celebra en el festival del cuy en el corregimiento de Obonuco como culminación del Carnaval de Negros y Blancos. Entre los postres más destacados se destacan el helado de paila y el dulce de chilacuán, y amasijos como los quimbolitos y las empanadas de añejo.  Una de sus bebidas representativas y típicas son los llamados \"hervidos\", que, como su nombre hace referencia, es una bebida caliente a base de jugo de frutas que puede ser de lulo, mora o maracuyá con un toque final de licor artesanal llamado \"chapil\" o aguardiente.</string>
    <string name="title_activity_maps">Map</string>
    <string name="UBICACIONESH">UBICACIONES DE LOS HOTELES</string>
    <string name="UBICACIONESR">UBICACIONES DE LOS RESTAURANTES</string>
    <string name="UBICACIONESB">UBICACIONES DE LOS BARES</string>

</resources>
