<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mPrincipal"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/principal" />
        <item
            android:id="@+id/mbares"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/bares" />
        <item
            android:id="@+id/mrestaurante"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/restaurante" />
        <item
            android:id="@+id/mhoteles"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/hoteles" />


        <item
            android:id="@+id/mextras"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/extras" />

    </group>

    <item android:title="Cuenta">
        <menu>
            <item
                android:id="@+id/mPerfil"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/perfil" />
            <item
                android:id="@+id/mLogOut"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/salir" />

        </menu>
    </item>

</menu>
