<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context="com.example.android.pastoturistico.RegistroActivity"

    >



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pasto2"
        android:layout_weight="1"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/username2"
        android:inputType="text"
        android:hint="@string/usuario"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/contraseña"
        android:inputType="textPassword"
        android:hint="@string/contraseña"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/recontraseña"
        android:inputType="textPassword"
        android:hint="@string/Recontraseña"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/correo"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_gravity="center"
     >
     <Button
         android:layout_width="wrap_content"
         android:layout_margin="20dp"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:background="@color/lightblue"
         android:id="@+id/cancel"
         android:text="@string/cancelar"/>

     <Button
         android:id="@+id/registro2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:translationX="20dp"
         android:background="@color/lightblue"
         android:gravity="center"
         android:text="@string/registrarse" />


 </LinearLayout>

</LinearLayout>
