<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.pastoturistico.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/pasto2"
        android:layout_weight="1"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/username"
        android:hint="@string/usuario"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/contraseña"/>
    <Button
        android:layout_width="match_parent"
        android:layout_margin="25dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/iniciar"
        android:background="@color/lightblue"
        android:text="@string/iniciarSes"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/registro"
        android:textColor="@color/blue"
        android:gravity="center"
        android:text="@string/registrarse"
        />

</LinearLayout>
