<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backwhite"
    android:orientation="vertical"
    tools:context="com.example.android.pastoturistico.MainActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="@color/black"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lugares"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
         />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/backwhite"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/Volcan1"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:src="@drawable/pasto2"
                android:id="@+id/imageView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/Volcan2"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/volcancumbal"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/lajas"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/lajas"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:text="@string/carnvales"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/carnaval"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:src="@drawable/carnaval2"
                />
        </LinearLayout>


    </ScrollView>

</LinearLayout>
