<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/pasto6"
    tools:context="com.example.android.pastoturistico.PerfilActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/perfil"
        android:textSize="50sp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:text="@string/usuarioo"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:id="@+id/tUsename"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp"/>


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:text="@string/correoo"
            android:textColor="@color/black"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:id="@+id/tCorreoo"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30sp"/>


    </LinearLayout>

</LinearLayout>
